--- a/src/components/enter.css
+++ b/src/components/enter.css
@@ -14,5 +14,12 @@
     border: none;
     border-radius: 12px;
     padding: 20px;
+    color: white;
+}
 
+.signbox {
+    background-color: #d6d3d4;
+    border: none;
+    border-radius: 12px;
+    display: "block"
 }
