--- a/src/components/enter.css
+++ b/src/components/enter.css
@@ -1,3 +1,9 @@
+body {
+    background-color: #4e494a;
+    
+}
+
+
 .signfield {
     border: none;
     border-radius: 12px;
@@ -20,6 +26,22 @@
 .signbox {
     background-color: #d6d3d4;
     border: none;
-    border-radius: 12px;
-    display: "block"
+    display: "block";
+    width: 500px;
+    position: relative;
+    left: 30%;
+    margin: 10px;
+    box-shadow: 0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108);
+
+}
+
+.or {
+    background-color: #d6d3d4;
+    border: none;
+    display: "block";
+    width: 32px;
+    position: relative;
+    left: 47.5%;
+    margin: 10px;
+    box-shadow: 0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108);
 }
