--- a/src/components/enter.css
+++ b/src/components/enter.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #4e494a;
+    background-color: #cad2c5;
     
 }
 
@@ -16,15 +16,16 @@ body {
 }
 
 .submit {
-    box-shadow: 0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108),  15px 15px 35px 20px rgb(33, 46, 105) inset;
+    box-shadow: 0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108),;
     border: none;
     border-radius: 12px;
     padding: 20px;
-    color: white;
+    color: #2f3e46;
+    font-weight: bold;
 }
 
 .signbox {
-    background-color: #d6d3d4;
+    background-color: #354f52;
     border: none;
     display: "block";
     width: 500px;
@@ -36,7 +37,7 @@ body {
 }
 
 .or {
-    background-color: #d6d3d4;
+    background-color: #354f52;
     border: none;
     display: "block";
     width: 32px;
