--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-.navbar {
+/*.navbar {
     background-color: #5f9ea0;
     border: none;
     border-radius: 12px;
@@ -7,8 +7,9 @@
     left: 0;
     top: 0;
     z-index: 2;
-    display: "inline-block"
-}
+    display: "inline-block";
+    
+}*/
 
 .display {
     display: inline-block;
@@ -57,3 +58,4 @@
     bottom: 0;
     right: 0;
 }
+
