--- a/src/components/enter.css
+++ b/src/components/enter.css
@@ -18,6 +18,7 @@ body {
 .submit {
     box-shadow: 0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108),;
     border: none;
+    display: block;
     border-radius: 12px;
     padding: 20px;
     color: #2f3e46;
@@ -45,4 +46,11 @@ body {
     left: 47.5%;
     margin: 10px;
     box-shadow: 0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108);
+}
+
+.signfield::placeholder {
+    color: black;
+    text-align: left;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
 }
