--- a/src/styles.css
+++ b/src/styles.css
@@ -14,8 +14,7 @@
 .display {
     display: inline-block;
     background-color: darkslategray;
-    box-shadow: 0 25.6px 57.6px 0 rgba(0, 0, 0, .22), 0 4.8px 14.4px 0 rgba(0, 0, 0, .18),;
-    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);    border: none;
     border-radius: 12px;
     margin: 20px;
     z-index: 0;
@@ -45,6 +44,10 @@
     bottom: 25px;
     margin-left: 12px;
     z-index: 0;
+    background-color: black;
+    color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 6px;
 }
 
 
@@ -57,5 +60,29 @@
     position: fixed;
     bottom: 0;
     right: 0;
+}
+
+::-webkit-scrollbar {
+    background-color: #cad2c5;
+    width: 20px;
+    border: none;
+    border-radius: 20px;
+    box-shadow: inset 0 25.6px 57.6px  rgba(1, 3, 3, 0.22), 0 25.6px 57.6px 0 rgba(0, 0, 0, .22), 0 4.8px 14.4px 0 rgba(0, 0, 0, .18);
+
+}
+
+::-webkit-scrollbar-button{
+    background-color: #cad2c5;
+    color: #fcf3ea;
+    box-shadow: 5px 5px 5px 5px rgba(.22, 22, 22, .22), 0 4.8px 14.4px 0 rgba(0, 0, 0, .18);
+    
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #354f52;
+    border: none;
+    box-shadow:  5px 5px 5px 5px  rgba(.22, 22, 22, .22), 10px 10px 5px 5px  rgba(.22, 22, 22, .22);
+    border-radius: 20px;
+
 }
 
