changed background color to a dark color

--- a/src/styles.css
+++ b/src/styles.css
@@ -72,7 +72,7 @@
 }
 
 ::-webkit-scrollbar-button{
-    background-color: #cad2c5;
+    background-color: #354f52;
     color: #fcf3ea;
     box-shadow: 5px 5px 5px 5px rgba(.22, 22, 22, .22), 0 4.8px 14.4px 0 rgba(0, 0, 0, .18);
     
