--- a/src/components/enter.css
+++ b/src/components/enter.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ffffff;
+    background-color: #2f3e46;
     
 }
 
@@ -34,6 +34,7 @@ body {
     left: 30%;
     margin: 10px;
     box-shadow: 0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108);
+    margin-bottom: 50px;
 
 }
 
