--- a/src/components/enter.css
+++ b/src/components/enter.css
@@ -13,6 +13,7 @@ body {
     display: inline-block;
     margin: 40px;
     font-size: 24px;
+    color: #2f3e46
 }
 
 .submit {
@@ -21,12 +22,13 @@ body {
     display: block;
     border-radius: 12px;
     padding: 20px;
-    color: #2f3e46;
+    background-color: #2f3e46;
+    color: white;
     font-weight: bold;
 }
 
 .signbox {
-    background-color: #354f52;
+    background-color: #cad2c5;
     border: none;
     display: "block";
     width: 500px;
@@ -50,7 +52,7 @@ body {
 }
 
 .signfield::placeholder {
-    color: black;
+    color: #2f3e46;
     text-align: left;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
