--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,8 @@
 .display {
     display: inline-block;
     background-color: #cad2c5;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);    
+    border: none;
     border-radius: 12px;
     margin: 20px;
     z-index: 0;
@@ -26,6 +27,7 @@
     color: white;
     display: inline-block;
     z-index: 0;
+    border-radius: 0 6px 6px 0;
 }
 
 .creatorpic {
