--- a/src/styles.css
+++ b/src/styles.css
@@ -64,6 +64,13 @@
     right: 0;
 }
 
+.textHead {
+    background-color: #b3c1b1;
+    display: inline-block;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 0 6px 6px 0;
+}
+
 ::-webkit-scrollbar {
     background-color: #cad2c5;
     width: 20px;
