--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,7 @@
     border: none;
     border-radius: 365px;
     z-index: 0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .creatorname {
